--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -14,9 +14,9 @@
                <%=link_to(image_tag(post.thumbnail.url(:large2), :class => "image_thumbnail"), post )%>
              </div>
              <div class="thumbnail--container">
-               <p class="date"><%= post.category.name %></p>
+               <p class="date_post_preview"><%= post.category.name %></p>
                <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
-               <p class="date"><%= post.publish_at.strftime("%A, %b %d")%></p>
+               <p class="date_post_preview"><%= post.publish_at.strftime("%A, %b %d")%></p>
              </div>
            </div>
          <% end %>
