--- a/app/views/layouts/minimal.html.erb
+++ b/app/views/layouts/minimal.html.erb
@@ -64,7 +64,7 @@
             </div>
           </div>
         </div>
-        <div class="border" style="border-bottom: 1px solid rgba(0,0,0,0.1); border-top: 1px solid rgba(0,0,0,0.1); margin-top: 0 !important;">
+        <div class="border">
           <div class="nav_wrapper">
             <nav class="nav_article">
               <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
