--- a/app/assets/stylesheets/_category.css.scss
+++ b/app/assets/stylesheets/_category.css.scss
@@ -13,14 +13,10 @@
     align-items: center;
     justify-content: center;
 
-    #background {
-      height: 119px;
-    }
-
     h1 {
       background-color: white;
       text-shadow: 1px 1px #191919;
-      padding: 30px;
+      padding: 20px;
       margin: 0;
       color: #65B19D;
       font-family: 'Vollkorn', serif;
@@ -37,8 +33,8 @@
     }
 
     .fa-bars {
-      padding: 19px;
-      padding-top: 20px;
+      padding: 20px;
+      padding-left: 0px;
     }
   }
 
