--- a/app/assets/stylesheets/_pages.css.scss
+++ b/app/assets/stylesheets/_pages.css.scss
@@ -131,10 +131,19 @@
 }
 
 .link_nrml {
-  color: #545454;
+  color: black;
   font-weight: 400;
   &:hover {
     color: #545454;
+  }
+}
+
+.analytics_wrapper {
+  max-width: 100%;
+  overflow: auto;
+  .scrollmenu {
+    overflow: auto;
+    white-space: nowrap;
   }
 }
 
@@ -148,4 +157,15 @@
   &:hover {
     color: white;
   }
+}
+
+.apply_wrapper {
+  position: relative;
+  margin: 0 auto;
+  margin-top: -10%;
+  z-index: 0;
+  background-color: white;
+  padding: 3% 5%;
+  max-width: 800px;
+  width: 90%;
 }
