--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -4,6 +4,7 @@
 @import "category";
 @import "userprofile";
 @import "pages";
+@import "analytics";
 
 @media (max-width: 980px) {
    .nav-title {
@@ -12,7 +13,7 @@
 }
 
 .nav_wrapper {
-  max-width: 1400px;
+  max-width: 1300px;
   margin: 0 auto;
   padding: 0 30px;
 }
@@ -33,6 +34,24 @@
 }
 
 .dashboard-card {
+  opacity: 1;
+  transition: opacity 0.8s;
+  -webkit-transition: opacity 0.8s;
+
+  &:hover {
+    opacity: 0.7;
+  }
+  a {
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition:.5s;
+  }
+  a:hover {
+    text-decoration: none;
+    color: white;
+  }
   .stats_wrapper {
     margin: 0 auto;
     width: fit-content;
@@ -129,33 +148,6 @@
   }
 }
 
-.whats-new {
-  a, div {
-    display: inline !important;
-  }
-  .profile_img_small {
-    width: 40px;
-    height: 40px;
-    min-width: 40px;
-    min-height: 40px;
-    max-width: 40px;
-    max-height: 40px;
-    border-radius: 50%;
-  }
-  .list-group-item {
-    font-size: 12px;
-    display: flex !important;
-    flex-direction: row;
-  }
-  div {
-    color: #545454;
-    padding-left: 10px;
-    a:hover {
-      color: #545454;
-    }
-  }
-}
-
 .analytics {
   margin: 0 20px 20px 0;
 }
@@ -199,12 +191,19 @@
   font-style: italic;
 }
 
-.pitch_flds {
-  input, select, label {
-    display: block;
-  }
-  .margin_flds {
-    margin: 25px 0;
+.pitch_form_wrapper {
+  max-width: 800px;
+  padding: 30px 40px;
+  .pitch_flds {
+    textarea {
+      min-height: 150px;
+    }
+    input, select, label {
+      display: block;
+    }
+    .margin_flds {
+      margin: 25px 0;
+    }
   }
 }
 
@@ -277,7 +276,7 @@
   span {
     position: absolute;
     color: #b0b0b0;
-    margin-top: 24px;
+    margin-top: 22px;
     margin-left: 15px;
   }
 }
@@ -443,5 +442,14 @@ h5, h3 {
 @media (max-width: 600px) {
   .skinny_wrapper {
     width: 90%;
+  }
+  .pitches_wrapper {
+    .btn_cntnr {
+      margin-top: 10px;
+    }
+    .newpost--new--profile {
+      margin-right: 0;
+      padding: 10px;
+    }
   }
 }
