--- a/app/views/applies/create.html.erb
+++ b/app/views/applies/create.html.erb
@@ -1,11 +1,14 @@
 <!-- thank you page once submitted -->
 
-<div class="submitted" style="max-width: 1000px; margin: auto;">
-<div style="padding: 0px 20px">
-  <h1>Thank you for applying to The Teen Magazine!</h1>
-  <p>You will be notified within three business days if your application is accepted. </p>
+<div class="submitted" style="max-width: 800px; margin: auto;">
+<div style="padding: 0px 30px;">
+  <h1>We're so excited you want to join The Teen Magazine writer team!</h1>
+  <img style="display: block; width: 600px; max-width: 100%; margin: 0 auto;" src="https://media1.tenor.com/images/1f84b096cbe1cc9f3763c803bb17e10e/tenor.gif?itemid=5878976" />
+  <br>
+  <p>One of our amazing editors will read your cover letter and get back to you. You will be notified within three business days if your application is accepted.</p>
+  <p>Go back to <a href="/">The Teen Magazine</a></p>
 </div>
-<div class="signupdiv signup_full">
+<div class="signupdiv signup_full" style="float: none;">
   <div class="container">
     <div class="exclusive-offer">
       <h5 class="exclusive-title" id="exclusive-title--id">Join our mailing list to stay up to date with The Teen Magazine!</h5>
