--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,7 @@
          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
      <% else %>
          <a href="/apply">Apply</a>
+         <a href="/login">Login</a>
       <% end %>
       <div style="height: 2000px; background-color: #65B19D;">
       </div>
@@ -91,7 +92,7 @@
           </div>
         </div>
         <div class="border">
-          <nav style="border-bottom: 1px solid rgba(0,0,0,0.1); border-top: 1px solid rgba(0,0,0,0.1); margin-top: 0 !important;" class="nav_article">
+          <nav class="nav_article">
             <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
             <a class="link" href="/categories/news">News</a>
             <a class="link" href="/categories/get-involved">Get Involved</a>
@@ -103,8 +104,8 @@
               <%= link_to "Create", pitches_path, class: "link" %>
               <%= link_to "Dashboard", user_path(current_user), class: "link" %>
             <% else %>
-                <a class="link" href="/contacts/new">Contact</a>
                 <a class="link" href="/apply">Apply</a>
+                <a class="link" href="/login">Login</a>
             <% end %>
           </nav>
         </div>
