--- a/app/views/layouts/category.html.erb
+++ b/app/views/layouts/category.html.erb
@@ -45,6 +45,7 @@
          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
      <% else %>
          <a href="/apply">Apply</a>
+         <a href="/login">Login</a>
       <% end %>
       <div style="height: 2000px; background-color: #65B19D;">
       </div>
@@ -69,7 +70,7 @@
             </div>
           </div>
           <div class="border">
-            <nav style="border-bottom: 1px solid rgba(0,0,0,0.1); border-top: 1px solid rgba(0,0,0,0.1); margin-top: 0 !important;" class="nav_article">
+            <nav class="nav_article">
               <%= link_to "The Teen Magazine", root_path, class: "nav-title"%>
               <a class="link" href="/categories/news">News</a>
               <a class="link" href="/categories/get-involved">Get Involved</a>
@@ -79,15 +80,10 @@
               <a class="link" href="/categories/fashion">Fashion</a>
               <% if user_signed_in? %>
                  <%= link_to "Create", pitches_path, class: "link" %>
-                 <% if current_user && (current_user.admin? || current_user.editor?) %>
-                   <%= link_to "Edit", reviews_path, class: "link" %>
-                   <%= link_to "Writers", users_path, class: "link" %>
-                 <% end %>
                  <%= link_to "Dashboard", user_path(current_user), class: "link" %>
-                 <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "link" %>
               <% else %>
-                  <a class="link" href="/contacts/new">Contact</a>
                   <a class="link" href="/apply">Apply</a>
+                  <a class="link" href="/login">Login</a>
               <% end %>
             </nav>
           </div>
