--- a/app/views/pitches/edit.html.erb
+++ b/app/views/pitches/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="skinny_wrapper wrapper_padding">
+<div class="skinny_wrapper wrapper_padding pitch_form_wrapper">
   <h1>Edit Pitch</h1>
   <%= render "/pitches/form" %>
   <%= link_to "Delete", pitch_path(@pitch), method: :delete, data: {confirm: "Are you sure you want to delete this pitch? This cannot be undone."}, :class => "pitch_btn delete_btn" %>
