--- a/app/views/pitches/new.html.erb
+++ b/app/views/pitches/new.html.erb
@@ -1,4 +1,4 @@
-<div class="skinny_wrapper wrapper_padding">
+<div class="skinny_wrapper wrapper_padding pitch_form_wrapper">
   <h1>Pitch an Article</h1>
   <%= render "/pitches/form" %>
 </div>
