--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -152,43 +152,90 @@
          <% end %>
         </div>
         <br />
-        <div id="mc_embed_signup" style="width: 100%; margin: 20px 0; margin-left: 0px;">
-          <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding-left: 0;" novalidate>
-            <div id="mc_embed_signup_scroll">
-              <h2>Loving The Teen Magazine? Subscribe!</h2>
-              <div class="mc-field-group">
-                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-              </div>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
-              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        <% if @post.is_published? %>
+          <div id="mc_embed_signup" style="width: 100%; margin: 20px 0; margin-left: 0px;">
+            <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding-left: 0;" novalidate>
+              <div id="mc_embed_signup_scroll">
+                <h2>Loving The Teen Magazine? Subscribe!</h2>
+                <div class="mc-field-group">
+                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
                 </div>
-          </form>
-        </div>
-      </div>
-      <div class="post_apply">
-        <div id="apply_link">
-          <a href="/apply"><img id="apply_image" src="https://s3.amazonaws.com/theteenmagazine/3M0jhbo.jpg" /></a>
-        </div>
-        <div class="articles">
-          <div class="flex_other_articles">
-            <h3 class="title">Trending in <%= link_to(@post.category.name, @post.category) %></h3>
-            <div class="contain_articles">
-              <% @post.category.posts.published.limit(12).order("post_impressions desc")[0..6].each do |post| %>
-                <div class="ctgry_article">
-                   <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
-                  <div class="paragraph">
-                    <p><%= link_to(post.title.truncate_words(20), post) %></p>
+                <div id="mce-responses" class="clear">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                   </div>
-                </div>
-            <% end %>
+            </form>
+          </div>
+        <% end %>
+      </div>
+      <% if @post.is_published? %>
+        <div class="post_apply">
+          <div id="apply_link">
+            <a href="/apply"><%= image_tag "become_a_writer.jpg" %></a>
+          </div>
+          <div class="articles">
+            <div class="flex_other_articles">
+              <h3 class="title">Trending in <%= link_to(@post.category.name, @post.category) %></h3>
+              <div class="contain_articles">
+                <% @post.category.posts.published.limit(15).order("publish_at desc").dup.order("post_impressions desc")[0..6].each do |post| %>
+                  <div class="ctgry_article">
+                     <%= link_to(image_tag(post.thumbnail.url(:medium)), post) %>
+                    <div class="paragraph">
+                      <p><%= link_to(post.title.truncate_words(20), post) %></p>
+                    </div>
+                  </div>
+              <% end %>
+              </div>
             </div>
           </div>
         </div>
-      </div>
+      <% else %>
+        <div class="share_article_feedback">
+          <% if @post.sharing != true %>
+            <h3 class="title">Get peer feedback on your article</h3>
+            <br>
+            <div class="btn_cntnr">
+              <%= link_to "Turn on sharing", post_path(@post, sharing: true), class: "newpost--new--profile" %>
+            </div>
+          <% else %>
+            <h3>Peer comments and reviews</h3>
+            <div class="comments">
+              <ul class="list-group list-group-flush">
+                <% if @comments.count.eql? 0 %>
+                  <i>Social sharing is turned on! Ask other TTM writers to give their feedback on your article by posting the link to this article in the <a href="https://www.facebook.com/groups/615063885673363/" target="_blank" style="color: #65B19D;">Facebook group</a>.</i>
+                <% else %>
+                  <% @comments.each do |comment| %>
+                    <% if (comment.user_id.eql? current_user.id) || (@post.user_id.eql? current_user.id) || (current_user.admin) %>
+                      <%= link_to image_tag("delete_x.png"), comment_path(comment), method: :delete, class: "delete_btn_x" %>
+                    <% end %>
+                    <li class="list-group-item comment">
+                      <%= link_to(image_tag(comment.user.profile.url(:square), class: "profile_img_small"), comment.user) %>
+                      <div>
+                        <h6><%= link_to comment.user.full_name, comment.user %></h6>
+                        <span class="date_ago"><%= comment.user.comments.count %> points, <%= time_ago_in_words(comment.created_at) %> ago</span><br>
+                        <span><%= comment.text %></span><br>
+                      </div>
+                    </li>
+                  <% end %>
+                <% end %>
+                <%= form_for @comment do |f| %>
+                  <%= f.text_field :text, :placeholder => "Your feedback", class: "comment_field" %>
+                  <%= f.hidden_field :post_id, :post_id => @post.id %>
+                  <%= f.submit "", class: "submit_comment" %>
+                <% end %>
+              </ul>
+            </div>
+            <% if current_user.admin? || current_user.id = @post.id %>
+              <div class="btn_cntnr">
+                <%= link_to "Turn off sharing", post_path(@post, sharing: false), :data => {:confirm => "Are you sure you want to turn off peer sharing?"}, class: "newpost--new--profile" %>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+      <% end %>
     </div>
   </div>
   <br />
